--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 	    <artifactId>activation</artifactId>
 	    <version>1.1.1</version>
 	</dependency>
+	<dependency>
+    <groupId>org.glassfish.jersey.core</groupId>
+    <artifactId>jersey-server</artifactId>
+    <version>2.26-b08</version>
+</dependency>
     </dependencies>
 
     <build>
