--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,24 @@
 	    <artifactId>activation</artifactId>
 	    <version>1.1.1</version>
 	</dependency>
-	<dependency>
+<dependency>
+            <groupId>com.sun.jersey.contribs</groupId>
+            <artifactId>jersey-apache-client4</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+    </dependencies>
+	<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client -->
+<dependency>
     <groupId>org.glassfish.jersey.core</groupId>
-    <artifactId>jersey-server</artifactId>
+    <artifactId>jersey-client</artifactId>
     <version>2.26-b08</version>
 </dependency>
-    </dependencies>
+
 
     <build>
         <plugins>
