--- a/pom.xml
+++ b/pom.xml
@@ -56,17 +56,12 @@
         <dependency>
             <groupId>com.sun.jersey.contribs</groupId>
             <artifactId>jersey-apache-client4</artifactId>
-            <version>${jersey.version}</version>
+            <version>1.19.4</version>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-json</artifactId>
-            <version>${jersey.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-client</artifactId>
-            <version>2.26-b08</version>
+            <artifactId>jersey-core</artifactId>
+            <version>1.19.4</version>
         </dependency>
     </dependencies>
 	<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client -->
